--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
     <!--Services Provided w/ Description-->
     <main class="content">
         <section class="search-engine-optimization">
-            <img src="./images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./images/search-engine-optimization.jpg" class="float-left" alt="SEO Bubble Map"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./images/online-reputation-management.jpg" class="float-right" />
+            <img src="./images/online-reputation-management.jpg" class="float-right" alt="Positive Bar Graph Labeled Reputation"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./images/social-media-marketing.jpg" class="float-left" />
+            <img src="./images/social-media-marketing.jpg" class="float-left" alt="Social Media Devices & Tags"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -59,21 +59,21 @@
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./images/lead-generation.png" />
+            <img src="./images/lead-generation.png" alt="Money Funnel" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./images/brand-awareness.png" />
+            <img src="./images/brand-awareness.png" alt="LightBulb" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./images/cost-management.png"></img>
+            <img src="./images/cost-management.png" alt="Money & Gear"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -83,6 +83,7 @@
     <!--Company Information/ Footer-->
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
+        <!--Copy Right Info-->
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
